Add links and favicon

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BOUNCY</title>
-
+    <link rel="shortcut icon" href="../src/icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Source+Sans+Pro:wght@300;400;700&display=swap" rel="stylesheet">
@@ -21,11 +21,11 @@
                 </div>
                 <div class="section-header-menu_nav">
                     <ul class="site-navigation">
-                        <li><a href="#">Hello</a></li>
-                        <li><a href="#">details</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Team</a></li>
+                        <li><a href="#promo">Hello</a></li>
+                        <li><a href="#details">Details</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#team">Team</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,7 +43,7 @@
     <!-- / header-->
 
     <!-- promo-->
-    <section class="section-outer section-promo">
+    <section class="section-outer section-promo" id="promo">
         <div class="section-inner-promo">
             <div class="section-promo-content">
                 <div class="section-promo-content-wrapper">
@@ -63,7 +63,7 @@
     <!-- / promo-->
 
     <!-- details-->
-    <section class="section-outer section-details">
+    <section class="section-outer section-details" id="details">
         <div class="section-inner-details">
             <div class="section-inner-details-wrapper">
                 <div class="section-inner-details-wrapper_title">DetailS details BOUNCY</div>
@@ -133,7 +133,7 @@
     <!-- projects -->
 
     <!-- services-->
-    <section class="section-outer section-services">
+    <section class="section-outer section-services" id="services">
         <div class="section-inner-services">
             <div class="section-inner-services-wrapper">
                 <div class="section-inner-services-wrapper_title">Our Services</div>
@@ -242,7 +242,7 @@
     <!-- / impressed-->
 
     <!-- portfolio-->
-    <section class="section-outer section-portfolio">
+    <section class="section-outer section-portfolio" id="portfolio">
         <div class="section-inner-portfolio">
             <div class="section-inner-portfolio-wrapper">
                 <div class="section-inner-portfolio_title">THE PORTFOLIO</div>
@@ -288,7 +288,7 @@
     <!-- / portfolio-->
 
     <!-- team-->
-    <section class="section-outer section-team">
+    <section class="section-outer section-team" id="team">
         <div class="section-inner-team">
             <div class="section-inner-team-wrapper">
                 <div class="section-inner-team-wrapper_title">THE TEAM</div>
