--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,8 @@
                     <div class="section-header-wrapper_subtitle">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</div>
                 </div>
             </div>
-<<<<<<< Updated upstream
-            <div class="section-header-more">
-                <img src="../src/icons/more.png" alt="" class="section-header-more-image">
-=======
             <div class="section-header-more" id="header-more-button">
-                <img src="../src/icons/more.png" alt="">
->>>>>>> Stashed changes
+                <img src="../src/icons/more.png" alt="" class="section-header-more-image" id="header-more-image">
             </div>
         </div>
     </section>
@@ -61,7 +56,7 @@
                         blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
                         occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum
                          et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</div>
-                    <button class="section-promo-content-wrapper_more" id="button_more">Read More</button>
+                    <button class="section-promo-content-wrapper_more" id="promo_button_more">Read More</button>
                 </div>
             </div>
             <div class="section-promo-image">
@@ -89,11 +84,7 @@
                      blanditiis praesentium</div>
                 <div class="section-inner-details-wrapper-icons">
                     <div class="section-inner-details-wrapper-icons-items">
-<<<<<<< Updated upstream
                         <img src="../src/icons/heart.png" alt="" class="section-inner-details-wrapper-icons-items-image">
-=======
-                        <img src="../src/icons/heart.png" alt="">
->>>>>>> Stashed changes
                     </div>
                     <div class="section-inner-details-wrapper-icons-items">
                         <img src="../src/icons/mouse.png" alt="" class="section-inner-details-wrapper-icons-items-image">
@@ -166,13 +157,8 @@
                     <div class="section-inner-services-content-icons-icon">
                         <img src="../src/icons/service-1.png" alt="" class="section-inner-services-content-icons-icon-image">
                     </div>
-<<<<<<< Updated upstream
                     <div class="section-inner-services-content-icons-icon section-inner-services-content-icons-icongreen">
                         <img src="../src/icons/service-2.png" alt="" class="section-inner-services-content-icons-icon-image">
-=======
-                    <div class="section-inner-services-content-icons-iconbasecolor">
-                        <img src="../src/icons/service-2.png" alt="">
->>>>>>> Stashed changes
                     </div>
                     <div class="section-inner-services-content-icons-icon">
                         <img src="../src/icons/service-3.png" alt="" class="section-inner-services-content-icons-icon-image">
@@ -183,19 +169,12 @@
                 </div>
                 <div class="section-inner-services-content-list">
                     <div class="section-inner-services-content-list-text1">Graphic Design</div>
-<<<<<<< Updated upstream
                     <div class="section-inner-services-content-list-text2">At vero eos et accusamus et <span class="greenfont">iusto</span>
-                        odio dignissimos <span class="boldfont">ducimus</span> qui blanditiis praesentium voluptatum deleniti</div>
+                        odio dignissimos <span class="boldfont">ducimus</span> qui blanditiis praesentium voluptatum deleniti
+                    </div>
                     <div class="section-inner-services-content-list-text3">
                         quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, <span class="greenfont">
                         similique</span> sunt in culpaqui officia deserunt mollitia animi, id est laborum et dolorum fuga.
-=======
-                    <div class="section-inner-services-content-list-text2">At vero eos et accusamus et <span class="basecolorfont">iusto</span>  
-                        odio dignissimos <span class="boldfont">ducimus</span> qui blanditiis praesentium voluptatum deleniti</div>
-                    <div class="section-inner-services-content-list-text3">
-                        quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, <span class="basecolorfont"> 
-                        similique</span> sunt in culpaqui officia deserunt mollitia animi, id est laborum et dolorum fuga. 
->>>>>>> Stashed changes
                     </div>
                 </div>
                 <div class="section-inner-services-content-diagrams">
@@ -263,14 +242,8 @@
                     Code Cafe</span>
                 </div>
                 <div class="section-inner-impressed-wrapper_monitor">
-<<<<<<< Updated upstream
                     <img src="../src/img/Monitor-1.png" alt="" class="section-inner-impressed-wrapper_monitor-image">
-                    <div class="section-inner-impressed-wrapper_monitor-text">b<span class="greenfont">o</span>uncy
-=======
-                    <img src="../src/img/Monitor-1.png" alt="">
-                    <div class="section-inner-impressed-wrapper_monitor-text">b<span class="basecolorfont">o</span>uncy
->>>>>>> Stashed changes
-                    </div>
+                    <div class="section-inner-impressed-wrapper_monitor-text">b<span class="greenfont">o</span>uncy</div>
                 </div> 
             </div>
         </div>
@@ -390,11 +363,7 @@
                     </div>
                 </div>
                 <div class="section-inner-team-wrapper-slider">
-<<<<<<< Updated upstream
                     <div class="section-inner-team-wrapper-slider-item section-inner-team-wrapper-slider-itemgreen"></div>
-=======
-                    <div class="section-inner-team-wrapper-slider-itembasecolor"></div>
->>>>>>> Stashed changes
                     <div class="section-inner-team-wrapper-slider-item"></div>
                     <div class="section-inner-team-wrapper-slider-item"></div>
                 </div>
@@ -432,11 +401,7 @@
                         </div>
                     </div>
                     <div class="section-inner-testimonials-wrapper-slider">
-<<<<<<< Updated upstream
                         <div class="section-inner-testimonials-wrapper-slider-item section-inner-testimonials-wrapper-slider-itemgreen"></div>
-=======
-                        <div class="section-inner-testimonials-wrapper-slider-itembasecolor"></div>
->>>>>>> Stashed changes
                         <div class="section-inner-testimonials-wrapper-slider-item"></div>
                         <div class="section-inner-testimonials-wrapper-slider-item"></div>
                     </div>
