Add href for social network

--- a/src/index.html
+++ b/src/index.html
@@ -582,21 +582,31 @@
             Copyright 2015. All rights Reserved
         </div>
         <div class="section-footer-contacts">
-            <div class="section-footer-contacts-item section-footer-contacts-facebook">
-                <img src="../src/icons/contact-facebook.png" class="section-footer-contacts-image" alt="">
-            </div>
-            <div class="section-footer-contacts-item section-footer-contacts-twitter">
-                <img src="../src/icons/contact-twitter.png" class="section-footer-contacts-image" alt="">
-            </div>
-            <div class="section-footer-contacts-item section-footer-contacts-instagram">
-                <img src="../src/icons/contact-insta.png" class="section-footer-contacts-image" alt="">
-            </div>
-            <div class="section-footer-contacts-item section-footer-contacts-icon">
-                <img src="../src/icons/contact-icon.png" class="section-footer-contacts-image" alt="">
-            </div>
-            <div class="section-footer-contacts-item section-footer-contacts-v">
-                <img src="../src/icons/contact-v.png" class="section-footer-contacts-image" alt="">
-            </div>
+            <a href="https://www.facebook.com/">
+                <div class="section-footer-contacts-item section-footer-contacts-facebook">
+                    <img src="../src/icons/contact-facebook.png" class="section-footer-contacts-image" alt="">
+                </div>
+            </a>
+            <a href="https://www.twitter.com/">
+                <div class="section-footer-contacts-item section-footer-contacts-twitter">
+                    <img src="../src/icons/contact-twitter.png" class="section-footer-contacts-image" alt="">
+                </div>
+            </a>
+            <a href="https://www.linkedin.com/">
+                <div class="section-footer-contacts-item section-footer-contacts-linkedin">
+                    <img src="../src/icons/contact-insta.png" class="section-footer-contacts-image" alt="">
+                </div>
+            </a>
+            <a href="https://www.instagram.com/">
+                <div class="section-footer-contacts-item section-footer-contacts-instagram">
+                    <img src="../src/icons/contact-icon.png" class="section-footer-contacts-image" alt="">
+                </div>
+            </a>
+            <a href="https://www.vimeo.com/">
+                <div class="section-footer-contacts-item section-footer-contacts-vimeo">
+                    <img src="../src/icons/contact-v.png" class="section-footer-contacts-image" alt="">
+                </div>
+            </a>
         </div>
     </section>
     <!-- / footer-->
