Add event for button Read More in the News

--- a/src/index.html
+++ b/src/index.html
@@ -436,7 +436,14 @@
                             in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem
                             rerum facilis est et expedita distinctio...
                         </div>
-                        <div class="section-inner-news-wrapper-content-body-more">+ Read More</div>
+                        <div class="section-inner-news-wrapper-content-body-more" id="news-more-button">+ Read More</div>
+                    </div>
+                    <div class="section-inner-news-wrapper-content-body-hidden" id="news-more-text">
+                        At vero eos et accusamus et iusto odio
+                            dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos
+                            dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                            in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem
+                            rerum facilis est et expedita distinctio...
                     </div>
                 </div>
                 <div class="section-inner-news-wrapper-slider">
@@ -626,6 +633,7 @@
     <script src="js/more.js"></script>
     <script src="js/promo_more.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/news_more.js"></script>
 
 </body>
 </html>
