Add change content for Details

--- a/src/index.html
+++ b/src/index.html
@@ -83,27 +83,62 @@
                 <div class="section-inner-details-wrapper_subtitle">At vero eos et accusamus et iusto odio dignissimos ducimus qui
                      blanditiis praesentium</div>
                 <div class="section-inner-details-wrapper-icons">
-                    <div class="section-inner-details-wrapper-icons-items">
+                    <div class="section-inner-details-wrapper-icons-items" id="icon_1">
                         <img src="../src/icons/heart.png" alt="" class="section-inner-details-wrapper-icons-items-image">
                     </div>
-                    <div class="section-inner-details-wrapper-icons-items">
+                    <div class="section-inner-details-wrapper-icons-items" id="icon_2">
                         <img src="../src/icons/mouse.png" alt="" class="section-inner-details-wrapper-icons-items-image">
                     </div>
-                    <div class="section-inner-details-wrapper-icons-items section-inner-details-wrapper-icons-items-green">
+                    <div class="section-inner-details-wrapper-icons-items section-inner-details-wrapper-icons-items-green" id="icon_3">
                         <img src="../src/icons/lamp.png" alt="" class="section-inner-details-wrapper-icons-items-image">
                     </div>
                 </div>
-                <div class="section-inner-details-wrapper-content">
+                <div class="section-inner-details-wrapper-content section-inner-details-wrapper-content-hidden" id="details_content_1">
+                    <div class="section-inner-details-wrapper-content_title">With love</div>
+                    <div class="section-inner-details-wrapper-content_subtitle">
+                        <div class="section-inner-details-wrapper-content_subtitle-text1">
+                            At <span class="basecolorfont">vero</span>
+                             eos et accusamus et iusto odio dignissimos <span class="boldfont">ducimus</span> qui blanditiis 
+                             praesentium voluptatum deleniti atque corrupti quos dolores
+                        </div>
+                        <div class="section-inner-details-wrapper-content_subtitle-text2">At vero eos et accusamus et iusto odio 
+                            dignissimos ducimus qui blanditiis praesentium <span class="boldfont">voluptatum deleniti atque</span> corrupti 
+                            quos dolores et quas molestias <span class="basecolorfont">excepturi</span> sint occaecati cupiditate 
+                            non provident, <span class="boldfont">similique</span> sunt in culpa qui officia deserunt 
+                            mollitia animi, id est laborum et dolorum fuga. Et harum quidem
+                        </div>
+                    </div>
+                </div>
+                <div class="section-inner-details-wrapper-content section-inner-details-wrapper-content-hidden"  id="details_content_2">
+                    <div class="section-inner-details-wrapper-content_title">Clickable</div>
+                    <div class="section-inner-details-wrapper-content_subtitle">
+                        <div class="section-inner-details-wrapper-content_subtitle-text1">
+                            At <span class="basecolorfont">vero</span>
+                             eos et accusamus et iusto odio dignissimos <span class="boldfont">ducimus</span> qui blanditiis 
+                             praesentium voluptatum deleniti atque corrupti quos dolores
+                        </div>
+                        <div class="section-inner-details-wrapper-content_subtitle-text2" id="title_change_2">At vero eos et accusamus et iusto odio 
+                            dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque <span class="boldfont">corrupti 
+                            quos</span> dolores et quas molestias <span class="basecolorfont">excepturi</span> sint occaecati cupiditate 
+                            non provident, <span class="boldfont">similique</span> sunt in culpa qui officia deserunt 
+                            mollitia animi, id est laborum et dolorum fuga. Et harum quidem
+                        </div>
+                    </div>
+                </div>
+                <div class="section-inner-details-wrapper-content" id="details_content_3">
                     <div class="section-inner-details-wrapper-content_title">Creative Ideas</div>
                     <div class="section-inner-details-wrapper-content_subtitle">
-                        <div class="section-inner-details-wrapper-content_subtitle-text1">At <span class="basecolorfont">vero</span>
+                        <div class="section-inner-details-wrapper-content_subtitle-text1">
+                            At <span class="basecolorfont">vero</span>
                              eos et accusamus et iusto odio dignissimos <span class="boldfont">ducimus</span> qui blanditiis 
-                             praesentium voluptatum deleniti atque corrupti quos dolores </div>
+                             praesentium voluptatum deleniti atque corrupti quos dolores
+                        </div>
                         <div class="section-inner-details-wrapper-content_subtitle-text2">At vero eos et accusamus et iusto odio 
                             dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque <span class="boldfont">corrupti 
                             quos</span> dolores et quas molestias <span class="basecolorfont">excepturi</span> sint occaecati cupiditate 
                             non provident, <span class="boldfont">similique</span> sunt in culpa qui officia deserunt 
-                            mollitia animi, id est laborum et dolorum fuga. Et harum quidem</div>
+                            mollitia animi, id est laborum et dolorum fuga. Et harum quidem
+                        </div>
                     </div>
                 </div>
             </div>
@@ -632,6 +667,7 @@
 
     <script src="js/more.js"></script>
     <script src="js/promo_more.js"></script>
+    <script src="js/details_changeContetnt.js"></script>
     <script src="js/map.js"></script>
     <script src="js/news_more.js"></script>
 
