Add change context for Services

--- a/src/index.html
+++ b/src/index.html
@@ -189,23 +189,53 @@
             </div>
             <div class="section-inner-services-content">
                 <div class="section-inner-services-content-icons">
-                    <div class="section-inner-services-content-icons-icon">
+                    <div class="section-inner-services-content-icons-icon" id="services-icon-1">
                         <img src="../src/icons/service-1.png" alt="" class="section-inner-services-content-icons-icon-image">
                     </div>
-                    <div class="section-inner-services-content-icons-icon section-inner-services-content-icons-icongreen">
+                    <div class="section-inner-services-content-icons-icon section-inner-services-content-icons-icongreen" id="services-icon-2">
                         <img src="../src/icons/service-2.png" alt="" class="section-inner-services-content-icons-icon-image">
                     </div>
-                    <div class="section-inner-services-content-icons-icon">
+                    <div class="section-inner-services-content-icons-icon" id="services-icon-3">
                         <img src="../src/icons/service-3.png" alt="" class="section-inner-services-content-icons-icon-image">
                     </div>
-                    <div class="section-inner-services-content-icons-icon">
+                    <div class="section-inner-services-content-icons-icon" id="services-icon-4">
                         <img src="../src/icons/service-4.png" alt="" class="section-inner-services-content-icons-icon-image">
                     </div>
                 </div>
-                <div class="section-inner-services-content-list">
+                <div class="section-inner-services-content-list section-inner-services-content-list-hidden" id="services-list-1">
+                    <div class="section-inner-services-content-list-text1">Developing</div>
+                    <div class="section-inner-services-content-list-text2"><span class="greenfont"></span>At vero eos et accusamus et iusto
+                        odio dignissimos <span class="boldfont">ducimus qui blanditiis praesentium voluptatum</span> deleniti
+                    </div>
+                    <div class="section-inner-services-content-list-text3">
+                        quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, <span class="greenfont">
+                        similique</span> sunt in culpaqui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+                    </div>
+                </div>
+                <div class="section-inner-services-content-list" id="services-list-2">
                     <div class="section-inner-services-content-list-text1">Graphic Design</div>
                     <div class="section-inner-services-content-list-text2">At vero eos et accusamus et <span class="greenfont">iusto</span>
                         odio dignissimos <span class="boldfont">ducimus</span> qui blanditiis praesentium voluptatum deleniti
+                    </div>
+                    <div class="section-inner-services-content-list-text3">
+                        quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, <span class="greenfont">
+                        similique</span> sunt in culpaqui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+                    </div>
+                </div>
+                <div class="section-inner-services-content-list section-inner-services-content-list-hidden" id="services-list-3">
+                    <div class="section-inner-services-content-list-text1">Playing</div>
+                    <div class="section-inner-services-content-list-text2">At vero eos et accusamus et <span class="greenfont">iusto
+                        odio dignissimos</span> <span class="boldfont">ducimus</span> qui blanditiis praesentium voluptatum deleniti
+                    </div>
+                    <div class="section-inner-services-content-list-text3">
+                        quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, <span class="greenfont">
+                        similique sunt in culpaqui officia</span> deserunt mollitia animi, id est laborum et dolorum fuga.
+                    </div>
+                </div>
+                <div class="section-inner-services-content-list section-inner-services-content-list-hidden" id="services-list-4">
+                    <div class="section-inner-services-content-list-text1">Accumulation</div>
+                    <div class="section-inner-services-content-list-text2">At vero eos et accusamus et <span class="greenfont">iusto</span>
+                        odio dignissimos <span class="boldfont">ducimus qui blanditiis praesentium voluptatum deleniti</span>
                     </div>
                     <div class="section-inner-services-content-list-text3">
                         quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, <span class="greenfont">
@@ -668,6 +698,7 @@
     <script src="js/more.js"></script>
     <script src="js/promo_more.js"></script>
     <script src="js/details_changeContetnt.js"></script>
+    <script src="js/services_changeContetnt.js"></script>
     <script src="js/map.js"></script>
     <script src="js/news_more.js"></script>
 
